# foreign-inference

./: .ghci  .gitignore  README.md  foreign-inference.cabal
doc/: notes.txt
share/: c.json
src/Foreign/Inference/: AnalysisMonad.hs  Array.hs  Diagnostics.hs  Interface.hs  Nullability.hs  Nullable.hs  Preprocessing.hs  Report.hs  Visualization.hs
static/: code-highlighter.js  codemirror-compressed.js  codemirror.css  highlight.js  jquery.snippet.js  style.css
stdlibs/: c.json  dl.json  llvm.json  m.json  pthread.json
tests/: AllocatorTests.hs  ArrayTests.hs  DumpInterface.hs  DumpNull.hs  ErrorHandlingTests.hs  EscapeTests.hs  FinalizerTests.hs  IIGlue.hs  IndirectCallTests.hs  InstructionEscapeTests.hs  NullAnalysisTests.hs  NullInfo.hs  NullableTests.hs  OutputHackTests.hs  OutputTests.hs  RefTests.hs  SAPArgumentTests.hs  SAPFinalizeTests.hs  SAPTests.hs  TransferTests.hs
tests/allocator/: allocOutWithNull.c  allocOutWithNull.c.expected  allocate-return-subobject.c  allocate-return-subobject.c.expected  failable-allocator.c  failable-allocator.c.expected  glib-vtbl.c  glib-vtbl.c.expected  global-struct-fptr-default.c  global-struct-fptr-default.c.expected  initialize-through-call-arg.c  initialize-through-call-arg.c.expected  not-allocator-cached.c  ptr-arith-return.c  ptr-arith-return.c.expected  resettable-allocator-no-default.c  resettable-allocator.c  return-subobject-with-escape.c  return-subobject-with-escape2.c  simple-allocator.c  simple-allocator.c.expected  simpleAllocOut.c  sometimes-return-constant.c  struct-fptr-allocator.c  struct-fptr-allocator.c.expected  struct-fptr-not-allocator.c  struct-fptr-not-allocator.c.expected  transAllocOut.c  transAllocOut.c.expected
tests/arrays/: array-through-global-struct.c  array-through-global-struct.c.expected  array-through-struct.c  array-through-struct.c.expected  array-through-temporary.c  base.h  base.json  callee-partial-deref.c  defined-call-deref.c  defined-call-deref.c.expected  hbAssignCodes.c.expected  indirect-call.c  indirect-call.c.expected  multiple-chains.c  multiple-chains.c.expected  multiple-chains2.c  one-dimension.c  one-dimension.c.expected  out-is-not-array.c  phi-in-call.c  phi-in-call.c.expected  simple-base-call.c  simple-base-call.c.expected  simple-recursion.c  struct-param-not-array.c  three-dim-call.c  three-dim-call.c.expected  three-dimensions.c  two-arrays.c  two-arrays.c.expected  two-dimensions.c  two-dimensions.c.expected
tests/error-handling/: check-two-failures.c  check-two-failures.c.expected  check-two-non-ptr.c  error-with-cleanup.c  error-with-cleanup.c.expected  error-with-two-cleanup-actions.c  error-with-two-cleanup-actions.c.expected  filters-error-codes-with-branch.c  filters-error-codes-with-branch.c.expected  fread-with-ferror.c  fread-with-ferror.c.expected  generalize-fstat.c  generalize-fstat.c.expected  generalize-return-value.c  generalize-return-value.c.expected  glib-io.c  glib-io.c.expected  handle-fread-error.c  handle-fread-error2.c  handle-fread-error2.c.expected  handle-fstat-error.c  handle-read-error.c  ignores-report-arg-calls.c  ignores-report-arg-calls.c.expected  irrelevant-code-before-return-0.c  irrelevant-code-before-return-0.c.expected  neg1-rc-as-bool.c  neg1-rc-as-bool.c.expected  reused-error-reporter.c  reused-error-reporter.c.expected  simple-transitive-error.c  simple-transitive-error.c.expected
tests/finalize/: exif-finalize.c  exif-finalize.c.expected  finalize-through-vtable-two-classes.c  finalize-through-vtable.c  finalize-through-vtable.c.expected  finalized-or-null.c  glib-vtbl.c  glib-vtbl.c.expected  libarchive.c  libarchive.c.expected  no-finalizer-call.c  simple-free-wrapper.c  simple-not-finalizer.c
tests/indirect-calls/: global-fptr-with-init.c  global-fptr-with-init.c.expected  simple-global-fptr.c  simple-global-fptr.c.expected  sqlite-extern-syscalls.c  sqlite-extern-syscalls.c.expected  sqlite-syscalls.c  sqlite-syscalls.c.expected  two-target-global-fptr.c  two-target-global-fptr.c.expected
tests/nullability/fields/: nullable-field.c  (+5 more)
tests/nullable/: FT_Stream_Open.c  FT_Stream_Open.c.expected  acl_create_entry.c  assert_ptr.c  assert_ptr.c.expected  base.h  base.json  bindText.c  bzWrite.c  bzWrite2.c  bzWriteOpen.c  checked-array.c  checked-call.c  checked-struct.c  checked-through-global.c  checked-through-struct.c  checked-through-temporary.c  control-dep-flag.c  default-fptr-value.c  default-pointer-may-be-null.c  default-pointer-may-be-null2.c  external-non-nullable.c  external-non-nullable.c.expected  external-nullable-call.c  guarded-not-null-call.c  guarded-phi-as-arg.c  hbAssignCodes.c  hbAssignCodes.c.expected  indirect-call.c  indirect-call.c.expected  non-null-fptr.c  non-null-fptr.c.expected  not-quite-must-execute.c  nullable-fptr.c  partial-checked-phi.c  pcre_compile2.c  pcre_find_bracket.c  pcre_find_bracket.c.expected  phi-as-arg.c  phi-as-arg.c.expected  (+28 more)
tests/output/: aliasedParameterOut.c  aliasedParameterOut.c.expected  allocOutWithNull.c.expected  conditionalStruct.c  doubleUpdate.c.expected  nonAllocOut.c  nonAllocOut.c.expected  nonAllocOut2.c  partialStruct.c  simpleForwardedOut.c  simpleForwardedOut.c.expected  simpleForwardedStructOut.c  simpleForwardedStructOut.c.expected  simpleInOut.c  simpleInOut.c.expected  simpleOut.c  simpleStructOut.c  simpleStructOut.c.expected  structOutByVal.c  transAllocOut.c.expected  tricky-inout.c  tricky-inout.c.expected
tests/output-hack/: doubleUpdate.c  doubleUpdate.c.expected  simpleOutputHack.c
tests/ref-counting/: atomic-intrusive.c  atomic-intrusive.c.expected  simple-intrusive-nested-count.c  simple-intrusive.c
tests/transfer/: basic-transfer.c  basic-transfer.c.expected  boxed-int.c  boxed-int.c.expected  container-new-elem.c  container-transfer-with-cast.c  container-transfer.c  container-transfer.c.expected  no-transfer-local-delete.c  no-transfer.c  transfer-to-global.c  transfer-to-global.c.expected  transitive-transfer.c  transitive-transfer.c.expected
tools/: IIGen.hs  IIGlue.hs  IIStats.hs  InterfaceChecker.hs  InterfaceDiff.hs
(+104 files in other folders)
