name: foreign-inference
version: 0.1.0
synopsis: A suite of program analyses to ease the generation of FFI bindings
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Foreign
build-type: Simple
cabal-version: >=1.10
tested-with: GHC == 7.4.1
extra-source-files: README.md
data-files: stdlibs/*.json,
            static/*.css,
            static/jquery-1.7.1.js,
            static/highlight.js
description: This is a smarter automatic binding generator.  It uses
             program analysis to infer most of the annotations that would
             normally be required for such a tool.  The analysis frontend
             is IIGlue.  A python ctypes code generator is included: IIGen.

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Foreign.Inference.Diagnostics,
                   Foreign.Inference.Interface,
                   Foreign.Inference.Interface.Diff,
                   Foreign.Inference.Analysis.Allocator,
                   Foreign.Inference.Analysis.Array,
                   Foreign.Inference.Analysis.Escape,
                   Foreign.Inference.Analysis.Finalize,
                   Foreign.Inference.Analysis.Nullable,
                   Foreign.Inference.Analysis.Output,
                   Foreign.Inference.Analysis.RefCount,
                   Foreign.Inference.Analysis.Return,
                   Foreign.Inference.Analysis.ScalarEffects,
                   Foreign.Inference.Analysis.IndirectCallResolver,
                   Foreign.Inference.Analysis.Util.CompositeSummary,
                   Foreign.Inference.AnalysisMonad,
                   Foreign.Inference.Preprocessing,
                   Foreign.Inference.Report
  other-modules: Foreign.Inference.Report.FunctionText,
                 Foreign.Inference.Report.Html,
                 Foreign.Inference.Report.Types,
                 Foreign.Inference.Interface.Metadata,
                 Foreign.Inference.Interface.Types,
                 Foreign.Inference.Internal.FlattenValue
  build-depends: base > 3 && < 5, containers, filepath, text, bytestring, ghc-prim,
                 unordered-containers >= 0.2.1.0, hashable, mtl > 2 && < 3,
                 aeson >= 0.4.0.0, loch-th >= 0.2, temporary, process, data-ordlist,
                 llvm-analysis, deepseq, lens >= 1,
                 failure >= 0.2, regex-tdfa, transformers >= 0.2 && < 0.4, hbgl,
                 file-embed >= 0.0.4.2, hjsmin, graphviz, data-default, semigroups,
                 datalog,
                 -- For the reporting code
                 archive-inspection, directory, attoparsec >= 0.10 && < 1.0, ascii,
                 blaze-html >= 0.5, highlighting-kate >= 0.5, blaze-builder >= 0.3,
                 parallel-io, blaze-markup
  ghc-options: -Wall -funbox-strict-fields
  ghc-prof-options: -auto-all


test-suite ArrayTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: ArrayTests.hs
  build-depends: llvm-analysis, llvm-data-interop, foreign-inference,
                 base > 3 && < 5, filepath, HUnit, containers

test-suite NullableTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: NullableTests.hs
  build-depends: llvm-analysis, llvm-data-interop, foreign-inference,
                 base > 3 && < 5, filepath, HUnit, containers

test-suite RefCountTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: RefTests.hs
  build-depends: llvm-analysis, llvm-data-interop, foreign-inference,
                 base > 3 && < 5, filepath, HUnit, containers

test-suite FinalizerTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: FinalizerTests.hs
  build-depends: llvm-analysis, llvm-data-interop, foreign-inference,
                 base == 4.*, filepath, HUnit, containers
  ghc-options: -Wall

test-suite AllocatorTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: AllocatorTests.hs
  build-depends: llvm-analysis, llvm-data-interop, foreign-inference,
                 base == 4.*, filepath, HUnit, containers
  ghc-options: -Wall -rtsopts -threaded

test-suite OutputTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: OutputTests.hs
  build-depends: llvm-analysis, llvm-data-interop, foreign-inference,
                 base == 4.*, filepath, HUnit, containers
  ghc-options: -Wall -rtsopts

test-suite EscapeTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: EscapeTests.hs
  hs-source-dirs: tests
  build-depends: llvm-analysis, llvm-data-interop, bytestring, mtl,
                 base > 3 && < 5, filepath, containers, HUnit, foreign-inference
  ghc-options: -Wall -rtsopts

test-suite InstructionEscapeTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: InstructionEscapeTests.hs
  hs-source-dirs: tests
  build-depends: llvm-analysis, llvm-data-interop, bytestring, mtl,
                 base > 3 && < 5, filepath, containers, HUnit, foreign-inference
  ghc-options: -Wall -rtsopts
