name: foreign-inference
version: 0.2.0
synopsis: A suite of program analyses to ease the generation of FFI bindings
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Foreign
build-type: Simple
cabal-version: >=1.10
tested-with: GHC == 7.4.1
extra-source-files: README.md
data-files: stdlibs/*.json,
            static/*.css,
            static/jquery.snippet.css,
            static/jquery-1.8.2.min.js,
            static/jquery.snippet.js,
            static/highlight.js

description: This package implements analyses over LLVM bitcode to support
             advanced automated library binding generation.  Frontends to
             drive this analysis and consume its results are available in the
             iiglue package.

flag Relocate
  description: Embed static resources in the binary
  default: False

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Foreign.Inference.Diagnostics,
                   Foreign.Inference.Interface,
                   Foreign.Inference.Interface.Diff,
                   Foreign.Inference.Analysis.Allocator,
                   Foreign.Inference.Analysis.Array,
                   Foreign.Inference.Analysis.ErrorHandling,
                   Foreign.Inference.Analysis.Escape,
                   Foreign.Inference.Analysis.Finalize,
                   Foreign.Inference.Analysis.Nullable,
                   Foreign.Inference.Analysis.Output,
                   Foreign.Inference.Analysis.RefCount,
                   Foreign.Inference.Analysis.Return,
                   Foreign.Inference.Analysis.SAP,
                   Foreign.Inference.Analysis.SAPPTRel,
                   Foreign.Inference.Analysis.ScalarEffects,
                   Foreign.Inference.Analysis.IndirectCallResolver,
                   Foreign.Inference.Analysis.Transfer,
                   Foreign.Inference.Analysis.Util.CalleeFold,
                   Foreign.Inference.Analysis.Util.CompositeSummary,
                   Foreign.Inference.AnalysisMonad,
                   Foreign.Inference.Preprocessing,
                   Foreign.Inference.Report
  other-modules: Foreign.Inference.Report.FunctionText,
                 Foreign.Inference.Report.Html,
                 Foreign.Inference.Report.Types,
                 Foreign.Inference.Interface.Metadata,
                 Foreign.Inference.Interface.Types,
                 Foreign.Inference.Internal.FlattenValue
  build-depends: base == 4.*,
                 unordered-containers >= 0.2.1.0,
                 mtl > 2,
                 aeson >= 0.4.0.0,
                 loch-th >= 0.2,
                 llvm-analysis >= 0.2.0,
                 lens >= 1,
                 failure >= 0.2,
                 GenericPretty > 1,
                 transformers >= 0.2 && < 0.4,
                 file-embed >= 0.0.4.2,
                 sbv >= 2.9 && < 2.10,
                 hashable, containers, filepath, text, bytestring,
                 deepseq, deepseq-generics, temporary, process,
                 ifscs, hbgl, hjsmin, graphviz, semigroups, ghc-prim,
                 -- For the reporting code
                 attoparsec >= 0.10 && < 1.0,
                 hamlet >= 1,
                 regex-tdfa, safe-failure, archive-inspection, directory,
                 blaze-builder, blaze-html, shakespeare-text, parallel-io
  ghc-options: -Wall -funbox-strict-fields
  ghc-prof-options: -auto-all

  if flag(Relocate)
    cpp-options: -DRELOCATE=1
  else
    other-modules: Paths_foreign_inference

test-suite ArrayTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: ArrayTests.hs
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 filepath, HUnit, containers

test-suite NullableTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: NullableTests.hs
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 filepath, HUnit, containers

test-suite RefCountTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: RefTests.hs
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 filepath, HUnit, containers

test-suite FinalizerTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: FinalizerTests.hs
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 filepath, HUnit, containers
  ghc-options: -Wall

test-suite AllocatorTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: AllocatorTests.hs
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 filepath, HUnit, containers
  ghc-options: -Wall -rtsopts -threaded

test-suite OutputTests
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: OutputTests.hs
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 filepath, HUnit, containers
  ghc-options: -Wall -rtsopts

-- test-suite EscapeTests
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   main-is: EscapeTests.hs
--   hs-source-dirs: tests
--   build-depends: llvm-analysis >= 0.2.0,
--                  llvm-data-interop >= 0.2.0,
--                  foreign-inference >= 0.2.0,
--                  base == 4.*,
--                  mtl >= 2,
--                  bytestring, filepath, containers, HUnit
--   ghc-options: -Wall -rtsopts

test-suite InstructionEscapeTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: InstructionEscapeTests.hs
  hs-source-dirs: tests
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 mtl > 2,
                 base == 4.*,
                 bytestring, filepath, containers, HUnit
  ghc-options: -Wall -rtsopts

test-suite IndirectCallTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: IndirectCallTests.hs
  hs-source-dirs: tests
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 containers, HUnit, filepath
  ghc-options: -Wall

test-suite ErrorHandlingTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: ErrorHandlingTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 containers, HUnit, filepath

test-suite TransferTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TransferTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 containers, HUnit, filepath

test-suite SAPTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SAPTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 containers, HUnit, filepath

test-suite SAPArgumentTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SAPArgumentTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 containers, HUnit, filepath

test-suite SAPFinalizeTests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SAPFinalizeTests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 foreign-inference >= 0.2.0,
                 base == 4.*,
                 containers, HUnit, filepath
